# RtPbrSurvey

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  D3D12HelloTexture.cpp  D3D12HelloTexture.h  D3D12HelloTextureModified.vcxproj  D3D12HelloTextureModified.vcxproj.filters  D3D12HelloTexturePasses.cpp  DXSample.cpp  DXSample.h  DXSampleHelper.h  GraphicsDevice.cpp  HelloTextureModified.sln  LICENSE  Main.cpp  MyDx12Utils.h  README.md  Restore-NuGet.ps1  RtPbrSurvey.sln  RtPbrSurvey.vcxproj  RtPbrSurvey.vcxproj.filters  SampleApp.cpp  SampleApp.h  THIRD_PARTY_NOTICES.md  Win32Application.cpp  Win32Application.h  WorkMeter.h  shaders_HybridReflection.hlsl  shaders_LightPass.hlsl  shaders_ReflectionRayHitDebug.hlsl  vcpkg.json
App/: DebugUi.cpp  DebugUi.h  HelloTextureApp.cpp  HelloTextureApp.h  RtPbrSurveyApp.cpp  RtPbrSurveyApp.h  SampleApp.cpp  SampleApp.h  SceneConfig.cpp  SceneConfig.h  SceneSelectUi.cpp  SceneSelectUi.h
Assets/Config/: scene_config_default.json
Camera/: DebugCameraController.cpp  DebugCameraController.h
Engine/: HelloTextureEngine.cpp  HelloTextureEngine.h  HelloTextureEnginePasses.cpp  RtPbrSurveyEngine.cpp  RtPbrSurveyEngine.h  RtPbrSurveyEnginePasses.cpp
Engine/FrameGraph/: RenderPassResources.h
Engine/Rhi/Dx12/: GraphicsDevice.cpp  GraphicsDevice.h
Platform/: AssetPath.h  CommandLineOptions.cpp  CommandLineOptions.h  FileIO.h  IApplication.h  ShaderCompiler.h  Win32Application.cpp  WindowInfo.h  WindowTitle.h
Renderer/: AccelerationStructureResources.cpp  AccelerationStructureResources.h  BrdfLut.cpp  BrdfLut.h  DebugDumpCapture.cpp  DebugDumpCapture.h  DebugLinePass.h  DeferredGpuReleaseQueue.h  EnvironmentMap.cpp  EnvironmentMap.h  FullscreenTriangle.h  GBuffer.cpp  GBuffer.h  HdrOutput.cpp  HdrOutput.h  HybridReflectionPass.cpp  HybridReflectionPass.h  LightingPass.h  Material.h  MaterialBuffer.cpp  MaterialBuffer.h  PipelineFactory.h  RayQueryShadowPass.h  RayQueryTlasDebugPass.h  ReflectionEvaluatePass.cpp  ReflectionEvaluatePass.h  ReflectionRayHitDebugPass.cpp  ReflectionRayHitDebugPass.h  RenderPassAuthoring.md  RenderPassAuthoring_j.md  ResolvedRenderTargets.h  RootSignatureFactory.cpp  RootSignatureFactory.h  RootSignatureLayout.h  SceneGeometryPass.h  ShadowMaskDebugPass.h  SimpleDescriptorHeapAllocator.h  SpecularDebugRayQueryPass.h  StagedDescriptorAllocator.h  StagedDescriptorAllocator_Test.cpp  (+6 more)
Runtime/: SceneRenderer.cpp  SceneRenderer.h  SceneRendererDebugUi.cpp  SceneRendererDebugUi.h  SceneRendererSettings.cpp  SceneRendererSettings.h
Scene/: SampleScene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneFactory.cpp
Shaders/: PbrLighting.hlsli  shaders_GBuffer.hlsl  shaders_GBufferDebug.hlsl  shaders_HybridReflection.hlsl  shaders_LightPass.hlsl  shaders_ReflectionEvaluate.hlsl  shaders_ReflectionRayHitDebug.hlsl  shaders_ToneMap.hlsl
Shared/: D3d12DebugName.h  D3d12Helpers.h  Error.h
Tests/: SceneRendererSettingsTests.cpp
Ui/: ImGuiSystem.h
doc/: EolFormattingAnalysis.md  PROJECT_VISION.md  PUBLIC_RELEASE_CHECKLIST.md
doc/branch/feature/: dlss-runtime-fixes.md  dlss-sr-rr-investigation.md  growable-descriptor-heap-review-5-bbaa6c1b2458.md  hybrid-reflection-foundation.md  rayquery-acceleration-structure-v2.md  scene-config-save-load.md  shadow-test-scenes.md
doc/branch/refactor/: cmake-host-integration.md  dxsample-split-inventory.md  dxsamplehelper-refactor-complete.md  engine-separation-inventory.md  engine-separation.md  opencode-debug-ui-extraction-task.md  opencode-dxsample-split-inventory-task.md  opencode-dxsamplehelper-rhi-ownership-task.md  opencode-dxsamplehelper-shim-audit-task.md  opencode-standalone-readiness-inventory-task.md  scene-renderer-layer.md  scene-renderer-settings.md  standalone-readiness-inventory.md
